Fix loan application submission and connect FK relationships
- Added proper FK wiring between Owner, Business, BankAccount, Application
- Fixed ModelState validation blocking SaveChanges
- Enabled full validation summary in form
- Ensured EF Core inserts succeed in SQL Server

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LoanBeePortal": "Server=RALPH\\SQLEXPRESS;Database=LoanBeeDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "LoanBeePortal": "Server=TRISELLE\\SQLEXPRESS;Database=LoanBeeDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
