--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LoanBeePortal": "Server=TRISELLE\\SQLEXPRESS;Database=LoanBeeDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "LoanBeePortal": "Server=(localdb)\\MSSQLLocalDB;Database=LoanBeeDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
